--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4",
-    "webpack": "^4.28.3"
+    "webpack": "^4.28.3",
     "react-select": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
