--- a/client/package.json
+++ b/client/package.json
@@ -26,8 +26,7 @@
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4",
     "webpack": "^4.28.3",
-    "react-select": "^5.4.0",
-    "web-vitals": "^2.1.4"
+    "react-select": "^5.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
