--- a/client/package.json
+++ b/client/package.json
@@ -19,10 +19,14 @@
     "date-fns": "^2.28.0",
     "firebase": "^9.8.4",
     "jquery": "^3.6.0",
+    "moment": "^2.29.4",
+    "photoswipe": "^5.2.8",
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-select-dropdown": "^1.3.10",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.2",
+    "react-photoswipe-gallery": "^2.2.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-select": "^5.4.0",
