--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-select-dropdown": "^1.3.10",
+    "react-calendar": "^3.7.0",
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.2",
     "react-photoswipe-gallery": "^2.2.1",
