Added homepage in package.json

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-app",
+  "homepage": "https://friend-zone-9qpu31at6-notle1706.vercel.app/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
