package.json fixes

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-app",
-  "homepage": "https://friend-zone-9qpu31at6-notle1706.vercel.app/",
+  "homepage": "https://github.com/notle1706/FriendZone.git/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -39,7 +39,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
